--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -107,7 +107,7 @@
           <% if @article.summary_body.present? %>
             <div class="mb-8 article-content" id="article-detail-body">
               <div class="prose prose-lg max-w-none text-gray-200 leading-loose">
-                <%= Kramdown::Document.new(@article.summary_body).to_html.html_safe %>
+                <%= sanitize Kramdown::Document.new(@article.summary_body).to_html %>
               </div>
             </div>
           <% end %>
